# berkeleyRobot

./: .gitignore  CMakeLists.txt  SESSION_HANDOFF.txt  test_can.py  test_encoder.py
docs/: can-position-controller.md
firmware/: try 6 3 1 2026.ioc  try 6 3 1 2026.ioc.wb  try 6 3 1 2026.settings  try 6 3 1 2026.wbdef
firmware/Inc/: as5600.h  can_interface.h  drive_parameters.h  main.h  mc_configuration_registers.h  parameters_conversion.h  pmsm_motor_parameters.h  position_ctrl.h  power_stage_parameters.h  stm32g4xx_hal_conf.h
firmware/STM32CubeIDE/: .cproject  .project  try 6 3 1 2026.launch
firmware/STM32CubeIDE/Debug/: makefile  objects.list  try 6 3 1 2026.elf  try 6 3 1 2026.list  try 6 3 1 2026.map
firmware/STM32CubeIDE/Debug/Application/User/: as5600.cyclo  as5600.d  as5600.su  aspep.cyclo  aspep.d  aspep.su  can_interface.cyclo  main.d  (+70 more)
firmware/SimpleFOC/: platformio.ini
firmware/SimpleFOC/src/: main.cpp
firmware/Src/: as5600.c  can_interface.c  main.c  mc_app_hooks.c  mc_config.c  mc_config_common.c  mc_configuration_registers.c  mc_parameters.c  mc_tasks.c  mc_tasks_foc.c  position_ctrl.c  stm32_mc_common_it.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  stm32g4xx_mc_it.c
gui/: position_gui.py
pc_ui/: can_protocol.py  control_panel.py  main.py  position_graph.py
scripts/: calibrate_motor.py  position_move_test.py  position_test.py  setup_can.sh
src/: can_interface.cpp  can_interface.hpp  main.cpp  motor_protocol.cpp  motor_protocol.hpp  open_loop_test.cpp  position_move_test.cpp  position_test.cpp  speed_test.cpp  tcp_server.cpp  tcp_server.hpp
(+136 files in other folders)
